@@ -1,4 +1,4 @@
-/* $Id: display.c,v 1.27 2001/03/15 14:25:05 ltoetsch Exp $
+/* $Id: display.c,v 1.28 2001/03/16 16:40:17 ltoetsch Exp $
  *
  * framework for device drivers
  *
@@ -20,6 +20,9 @@
  *
  *
  * $Log: display.c,v $
+ * Revision 1.28  2001/03/16 16:40:17  ltoetsch
+ * implemented time bar
+ *
  * Revision 1.27  2001/03/15 14:25:05  ltoetsch
  * added unread/total news
  *
@@ -291,10 +294,11 @@ int lcd_bar (int type, int row, int col, int max, int len1, int len2)
 {
   if (row<1 || row>Lcd->rows) return -1;
   if (col<1 || col>Lcd->cols) return -1;
-  if (!(type & (BAR_H2 | BAR_V2))) len2=len1;
+  if (!(type & (BAR_H2 | BAR_V2 | BAR_T))) len2=len1;
   if (type & BAR_LOG) {
     len1=(double)max*log(len1+1)/log(max); 
-    len2=(double)max*log(len2+1)/log(max); 
+    if (!(type & BAR_T))
+      len2=(double)max*log(len2+1)/log(max); 
   }
   if (Lcd->put==NULL) return 0;
   return Lcd->bar (type & BAR_HV, row-1, col-1, max, len1, len2);
