@@ -49,3 +49,5 @@ lcd4linux-0.98
 - added another verbose level (-vvv) for debugging socket traffic
 
 - added nntp support for count of news/unread messages in subscribed NGs
+
+- implemented time series bar '$t'
